@@ -1,0 +1,53 @@
+{
+    "output": {
+        "disabled": false,
+        "iprange": "*",
+        "detectAjax": true
+    },
+    "behavior": {
+        "skin": "smokygrey",
+        "destination": "browser",
+        "maxfiles": "10",
+        "useScopeAnalysis": true
+    },
+    "prune": {
+        "maxStepNumber": "10",
+        "arrayCountLimit": "300",
+        "level": "10"
+    },
+    "properties": {
+        "analyseProtected": false,
+        "analysePrivate": false,
+        "analyseScalar": true,
+        "analyseTraversable": true
+    },
+    "methods": {
+        "analyseProtectedMethods": false,
+        "analysePrivateMethods": false,
+        "analyseGetter": true,
+        "debugMethods": "debug,toArray,__toString,toString"
+    },
+    "emergency": {
+        "maxCall": "15",
+        "maxRuntime": "60",
+        "memoryLeft": "64"
+    },
+    "feEditing": {
+        "disabled": "full",
+        "detectAjax": "full",
+        "skin": "full",
+        "useScopeAnalysis": "full",
+        "maxStepNumber": "full",
+        "arrayCountLimit": "full",
+        "level": "full",
+        "analyseProtected": "full",
+        "analysePrivate": "full",
+        "analyseTraversable": "full",
+        "analyseProtectedMethods": "full",
+        "analysePrivateMethods": "full",
+        "analyseGetter": "full",
+        "maxCall": "full",
+        "memoryLeft": "full",
+        "maxRuntime": "full"
+    }
+}
